fix heading style bug on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -67,7 +67,7 @@
 
   /* Prose overrides */
   .prose-xl h2 {
-    @apply text-5xl xl:text-7xl mt-6 mb-8;
+    @apply text-4xl md:text-6xl xl:text-7xl mt-6 mb-8;
   }
   .tech h3 {
     @apply mt-0;
